--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <a href="#"> <img src="./assets/img/svg/play button.svg" alt="play button">Watch Video</a>
                </div>
             </div>
-            <img src="./assets/img/rocet.svg" alt="main img" class="intro__main-img">
+            <img src="./assets/img/svg/rocet.svg" alt="main img" class="intro__main-img">
          </div>
       </section>
 
@@ -135,6 +135,26 @@
     </div>
 	</div>
 </div>
+
+<section class="about">
+   <div class="container">
+      <div class="about__info">
+         <h2>
+            What our clients say about our awesome solutions
+         </h2>
+         <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain
+            some
+            advantage from it who do not know.</p>
+         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing .</p>
+         <p>Lorem ipsum is placeholder previewing layouts and visual mockups.</p>
+         <p>Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for
+            previewing layouts and visual mockups.
+         </p>
+      </div>
+      <img src="./assets/img/svg/about3 1.svg" alt="about img" class="about__img">
+   </div>
+</section>
+</main> 
 
 
 <!--  -->
