--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				</div>
         <div class="swiper-slide">	
 					<div class="swiper-slide-icon">
-						<img src="./assets/img/svg/2.svg" alt="">
+						<img src="./assets/img/svg/2.svgp" alt="">
 					</div>
 					<h5>Expert Prespective Agency Awards</h5>
 					<p>Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and visual mockups.</p></div>
@@ -143,3 +143,4 @@
 	 <script src='./swiper/swiper.js'> </script>
   </body>
 </html>
+testtttttttttttttttttttttt
